k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: chat-app
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: chat-app
  template: 
    metadata: 
      labels: 
        app: chat-app
    spec: 
      containers: 
        - name: chat-app
          image: dinhtri69/chat-app:latest
          ports:
            - containerPort: 80
