k8s/services.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: chat-service
spec: 
  selector:
    app: chat-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
